# atelier-rust-cli

./: Cargo.toml
src/: chifoumi.rs  greetings.rs  main.rs  search.rs
